injection/logs/8497171.err
  File "/panfs/roc/groups/7/cough052/barna314/nmma_fitter/injection/injectionScript.py", line 52
    activateNMMA = subprocess.run("conda activate nmma",shell=True,capture_output=True)
               ^
SyntaxError: invalid syntax
